# Copyright 2010-2025 Google LLC
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = [
    "//ortools/math_opt:__subpackages__",
    "//ortools/service:__subpackages__",
])

py_binary(
    name = "solve_math_opt_model_via_http",
    srcs = ["solve_math_opt_model_via_http.py"],
    deps = [
        requirement("absl-py"),
        "//ortools/math_opt/python:mathopt",
        "//ortools/math_opt/python/ipc:remote_http_solve",
    ],
)
